# rinss

./: kill_all  start_all
.exercise6/src/: cylinder_segmentation.cpp
exercise7/exercise7/scripts/: move_arm.py
exercise7/exercise7/worlds/: rins.world
kobuki/kobuki_description/launch/: view_model.launch
kobuki/kobuki_description/rviz/: rviz_config_old.rviz
task1/: CMakeLists.txt  mymap.pgm  mymap.yaml  mymap_legacy.pgm  mymap_legacy.yaml  mymap_legacyBetter.pgm  mymap_legacyBetterOffset.pgm  package.xml
task1/launch/: amcl_simulation.launch
task1/msg/: Face.msg  FaceID_and_pose.msg  Face_and_pose.msg  GreetingDelta.msg
task1/scripts/: face_localizer_dlib.py  face_recognizer.py  movement.py
task2/: CMakeLists.txt  borders.yaml  package.xml
task2/launch/: amcl_simulation.launch  face_speech.launch  find_cylinder.launch  find_cylinders.launch  find_rings.launch  rings_cylinders.launch  rins_world.launch
task2/msg/: ColorAndPose.msg  Face.msg  Greet.msg  GreetingDelta.msg  Poster.msg  PrisonerLocation.msg  RobberLocations.msg
task2/scripts/: cylinder.py  cylinders.py  extract_speech.py  extract_text.py  face_localizer_dlib.py  face_recognizer.py  move_arm.py  movement.py  neki.py  park.py  reidentification.py  ring_localizer.py  rings.py  sound.py
task2/src/: cylinder_segmentation.cpp  ring_segmentation.cpp
task2/srv/: isIDPoster.srv
task2/worlds/: rins.world
turtlebot_interactions/turtlebot_rviz_launchers/rviz/: navigation.rviz  task3.rviz
turtlebot_navigation/param/: dwa_local_planner_params.yaml
